--- a/src/global/mixins/mixins_typo.scss
+++ b/src/global/mixins/mixins_typo.scss
@@ -127,6 +127,7 @@
   line-height: inherit;
   letter-spacing: inherit;
   font-size: inherit;
+  text-align: inherit;
 }
 
 // ----------------------------------------------------------------------------------------------------
