style: remove hover state when active

--- a/src/components/sbb-card/sbb-card.scss
+++ b/src/components/sbb-card/sbb-card.scss
@@ -102,13 +102,13 @@
 }
 
 @include hover-mq($hover: true) {
-  :host(:hover) {
-    @include shadow-level-9-hard;
+  :host {
+    .sbb-card:not([active]):hover {
+      @include shadow-level-9-hard;
 
-    cursor: pointer;
-
-    .sbb-card__content {
-      transform: translateY(#{px-to-rem-build(-2)});
+      .sbb-card__content {
+        transform: translateY(#{px-to-rem-build(-2)});
+      }
     }
   }
 }
