--- a/src/components/sbb-card/sbb-card.scss
+++ b/src/components/sbb-card/sbb-card.scss
@@ -3,6 +3,7 @@
 @include host-component-properties;
 
 :host {
+  --sbb-card-background-color: var(--sbb-color-white-default);
   --sbb-card-padding-inline: var(--sbb-spacing-responsive-xxs);
   --sbb-card-padding-block-start: var(--sbb-spacing-fixed-3x);
   --sbb-card-padding-block-end: var(--sbb-card-padding-block-start);
@@ -92,10 +93,17 @@
 .sbb-card__link {
   width: 100%;
   border-radius: var(--sbb-card-border-radius);
-  background-color: var(--sbb-color-white-default);
+  background-color: var(--sbb-card-background-color);
   padding-inline: var(--sbb-card-padding-inline);
   padding-block-start: var(--sbb-card-padding-block-start);
   padding-block-end: var(--sbb-card-padding-block-end);
+}
+
+:host([negative]) {
+  .sbb-card__button,
+  .sbb-card__link {
+    --sbb-card-background-color: var(--sbb-color-milk-default);
+  }
 }
 
 .sbb-card__content {
