feat: minor changes

--- a/src/components/sbb-menu-action/sbb-menu-action.scss
+++ b/src/components/sbb-menu-action/sbb-menu-action.scss
@@ -28,6 +28,7 @@
 .sbb-menu-action__icon {
   display: flex;
   min-width: var(--sbb-spacing-fixed-8x);
+  min-height: var(--sbb-spacing-fixed-6x);
   padding-inline-end: var(--sbb-spacing-fixed-2x);
 }
 
