fix: test chromatic stories without animations

--- a/src/components/sbb-menu/sbb-menu.scss
+++ b/src/components/sbb-menu/sbb-menu.scss
@@ -42,28 +42,23 @@
   background-color: var(--sbb-color-black-default);
   padding-inline: 0;
   padding-block: var(--sbb-spacing-fixed-1x);
-  will-change: visibility, transform, opacity;
-  transition: {
-    property: visibility, transform, opacity;
-    duration: var(--sbb-animation-duration-6x);
-    timing-function: ease;
-  }
 
-  &[open] {
-    animation: {
-      name: show;
-      duration: var(--sbb-animation-duration-6x);
-      timing-function: ease;
-    }
-  }
+  // &[open] {
+  //   animation: {
+  //     name: show;
+  //     duration: var(--sbb-animation-duration-6x);
+  //     timing-function: ease;
+  //   }
+  // }
 
   &::backdrop {
     background: rgb(0 0 0 / 20%);
-    animation: {
-      name: show-backdrop;
-      duration: 0.24s;
-      timing-function: ease;
-    }
+
+    // animation: {
+    //   name: show-backdrop;
+    //   duration: 0.24s;
+    //   timing-function: ease;
+    // }
   }
 
   &::after {
