--- a/src/components/sbb-menu/sbb-menu.scss
+++ b/src/components/sbb-menu/sbb-menu.scss
@@ -49,6 +49,10 @@
       duration: var(--sbb-animation-duration-6x);
       timing-function: ease;
     }
+
+    &.sbb-menu--no-animation {
+      animation-duration: 0s;
+    }
   }
 
   &::backdrop {
@@ -58,6 +62,12 @@
       name: show-backdrop;
       duration: 0.24s;
       timing-function: ease;
+    }
+  }
+
+  &.sbb-menu--no-animation {
+    &::backdrop {
+      animation-duration: 0s;
     }
   }
 
