feat(sbb-card): component implementation (#1358)
Closes #1216

--- a/src/global/mixins/mixins_typo.scss
+++ b/src/global/mixins/mixins_typo.scss
@@ -138,6 +138,7 @@
   line-height: inherit;
   letter-spacing: inherit;
   font-size: inherit;
+  text-align: inherit;
 }
 
 // ----------------------------------------------------------------------------------------------------
