--- a/src/components/sbb-card-badge/sbb-card-badge.scss
+++ b/src/components/sbb-card-badge/sbb-card-badge.scss
@@ -21,9 +21,9 @@
   position: absolute;
   inset-block-start: 0;
   inset-inline-end: 0;
-  padding-inline-start: var(--sbb-spacing-fixed-1x);
-  padding-inline-end: var(--sbb-spacing-fixed-8x);
+  padding-inline-end: var(--sbb-spacing-fixed-6x);
   border-end-start-radius: var(--sbb-border-radius-4x);
+  z-index: inherit;
 
   // Left to right expression
   right: calc(var(--sbb-spacing-fixed-3x) * -1);
@@ -31,7 +31,7 @@
 
   > * {
     transform: skew(-16deg, 0deg);
-    padding-inline-start: 0.5em;
+    padding-inline-start: var(--sbb-spacing-fixed-2x);
   }
 
   // Right to left expression
