--- a/src/components/sbb-link/sbb-link.scss
+++ b/src/components/sbb-link/sbb-link.scss
@@ -27,6 +27,7 @@
   text-decoration: none;
   word-break: break-word;
   fill: currentcolor;
+  text-align: left;
 
   &:focus-visible {
     @include focusOutline;
