--- a/src/components/sbb-button/sbb-button.scss
+++ b/src/components/sbb-button/sbb-button.scss
@@ -347,6 +347,6 @@ a.sbb-button {
   @include ellipsis;
 }
 
-.sbb-button__icon-description {
-  @include screenReaderOnly;
+.sbb-button__label--hidden {
+  display: none;
 }
