--- a/src/global/mixins.scss
+++ b/src/global/mixins.scss
@@ -64,45 +64,30 @@
 
   /* background of the scrollbar except button or resizer */
   &::-webkit-scrollbar-track {
-    background-color: var(--sbb-color-white-default);
-
-    @if $color == 'dark' {
-      background-color: var(--sbb-color-black-default);
-    }
-
     @if $radius != 0 {
       border-end-end-radius: $radius;
       border-start-end-radius: $radius;
     }
   }
 
-  &::-webkit-scrollbar-track:hover {
-    background-color: var(--sbb-color-white-default);
-
-    @if $color == 'dark' {
-      background-color: var(--sbb-color-black-default);
-    }
-  }
-
   /* scrollbar itself */
   &::-webkit-scrollbar-thumb {
     background-color: var(--sbb-color-black-alpha-30);
-    border: #{px-to-rem-build(7)} solid var(--sbb-color-white-default);
+    border: #{px-to-rem-build(7)} solid transparent;
     border-radius: var(--sbb-border-radius-4x);
+    background-clip: padding-box;
 
     @if $color == 'dark' {
       background-color: var(--sbb-color-white-alpha-30);
-      border-color: var(--sbb-color-black-default);
     }
   }
 
   &::-webkit-scrollbar-thumb:hover {
     background-color: var(--sbb-color-black-alpha-60);
-    border: #{px-to-rem-build(5.5)} solid var(--sbb-color-white-default);
+    border-width: #{px-to-rem-build(5.5)};
 
     @if $color == 'dark' {
       background-color: var(--sbb-color-white-alpha-60);
-      border-color: var(--sbb-color-black-default);
     }
   }
 
