--- a/src/components/sbb-button/sbb-button.scss
+++ b/src/components/sbb-button/sbb-button.scss
@@ -282,7 +282,7 @@ a.sbb-button {
 // If the the device can hover over elements with ease
 @include hover-mq($hover: true) {
   .sbb-button:hover:not(:disabled) {
-    --translate-y-content-hover: #{px-to-rem-build(-1)};
+    --sbb-button-translate-y-content-hover: #{px-to-rem-build(-1)};
 
     color: var(--sbb-button-color-hover-text);
 
@@ -318,11 +318,11 @@ a.sbb-button {
   }
 }
 
-.sbb-button--secondary-negative,
+.sbb-button--secondary.sbb-button--negative,
 .sbb-button--translucent,
-.sbb-button--translucent-negative,
+.sbb-button--translucent.sbb-button--negative,
 .sbb-button--transparent,
-.sbb-button--transparent-negative {
+.sbb-button--transparent.sbb-button--negative {
   &::before {
     box-shadow: none;
   }
@@ -339,7 +339,7 @@ a.sbb-button {
 .sbb-button__icon {
   transition: transform var(--sbb-button-transition-duration)
     var(--sbb-button-transition-easing-function);
-  transform: translateY(var(--translate-y-content-hover, #{px-to-rem-build(0)}));
+  transform: translateY(var(--sbb-button-translate-y-content-hover, #{px-to-rem-build(0)}));
 }
 
 .sbb-button__label {
